--- a/.github/workflows/dailyCommit.yml
+++ b/.github/workflows/dailyCommit.yml
@@ -20,9 +20,12 @@ jobs:
           echo "Automatische Aktualisierung am $(date)" >> daily_update.txt
 
       - name: Änderungen committen und pushen
+        env:
+          GITHUB_TOKEN_PAT: ${{ secrets.GITHUB_TOKEN_PAT }}
         run: |
           git config --global user.name 'Mirci212'
-          git config --global user.email 'Marcomaier1006@outlook.com'
+          git config --global user.email 'mirci212@example.com'
           git add .
           git commit -m "Täglicher automatischer Commit"
-          git push origin output
+          git push https://Mirci212:${GITHUB_TOKEN_PAT}@github.com/Mirci212/dein-repo.git output
+
