--- a/.github/workflows/dailyCommit.yml
+++ b/.github/workflows/dailyCommit.yml
@@ -24,7 +24,7 @@ jobs:
           GITHUB_TOKEN_PAT: ${{ secrets.GITHUB_TOKEN_PAT }}
         run: |
           git config --global user.name 'Mirci212'
-          git config --global user.email 'mirci212@example.com'
+          git config --global user.email 'Marcomaier1006@outlook.com'
           git add .
           git commit -m "Täglicher automatischer Commit"
           git push https://Mirci212:${GITHUB_TOKEN_PAT}@github.com/Mirci212/Mirci212.git output
